# Vega

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/vega/: compiler.h
src/vega/net/: ip.h  tcp.cc  tcp.h
src/vega/net/detail/: tcp.h
src/vega/server/: client.cc  client.h  main.cc
src/vega/server/protocol/: packet.cc  packet.h  protocol.h  protocol_1.16.cc  protocol_1.16.h
src/vega/util/: string.h  varint.h
vega/protocol/: mc736.h
vega/server/: BUILD.bazel  main.cc  socket.h
vega/util/: BUILD.bazel  stream.h  varint.h
